Fixed spacing

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -12,7 +12,6 @@
 
 @mixin flexSeparate {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   & > *:first-child {
     text-align: left;
@@ -22,5 +21,11 @@
   }
   & > *:not(:first-child):not(:last-child) {
     text-align: center;
+  }
+  @media screen and (max-width: 400px) {
+    flex-direction: column-reverse;
+    & > * {
+      text-align: left;
+    }
   }
 }
